[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"


[tool.flit.metadata]
module = "datasurveyor"
author = "Nick Buker"
author-email = "nickbuker@gmail.com"
home-page = "https://github.com/nickbuker/datasurveyor"
requires = [
    "pandas >=1.0.4",
]
requires-python = "~=3.6,<4"
description-file = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]


[tool.flit.metadata.requires-extra]
test = [
    "pytest >=5.4.3",
    "pytest-cov >=2.10.0",
]


[tool.flit.sdist]
exclude = [
    "data/"
]
